fix: improve readability on about page

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -120,3 +120,13 @@
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
 }
+
+/* Custom utilities */
+@utility blur-2xs {
+  filter: blur(2px);
+}
+
+@utility backdrop-blur-2xs {
+  -webkit-backdrop-filter: blur(2px);
+  backdrop-filter: blur(2px);
+}
